# scriptpanel

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  script_panel.desktop  script_panel.desktop-template  script_panel.desktop.in
config/: script_panel.yaml
example_scripts/: script2.sh  scriptpanel.yaml
resources/: scriptpanel.desktop.in
src/: Makefile  control_panel.txt  main.cpp  wrap_string.cpp
